# OneDrive-Redirect-Manager

./: README.md  pyproject.toml  run.py
.onedrive_redirector_runtime/: settings.json
_legacy_backup_before_qml_rewrite/: README.md  pyproject.toml
_legacy_backup_before_qml_rewrite/docs/: config_format.md
_legacy_backup_before_qml_rewrite/src/onedrive_redirector/: app.py  dialogs.py  junction_ops.py  main_window.py  models.py  path_utils.py  project_store.py  settings_store.py  status_checker.py
_legacy_backup_before_qml_rewrite/tests/: test_file_ops.py  test_junction_ops.py  test_path_utils.py  test_project_store.py  test_status_checker.py
_legacy_backup_before_rewrite/: README.md  pyproject.toml  requirements.txt
_legacy_backup_before_rewrite/docs/: config_format.md
_legacy_backup_before_rewrite/src/onedrive_redirector/: app.py  config_manager.py  conflict_resolver.py  constants.py  file_ops.py  link_ops.py  logger_setup.py  models.py  path_utils.py  status_checker.py
_legacy_backup_before_rewrite/src/onedrive_redirector/ui/: bridge.py  dialogs.py  main_window.py  widgets.py
_legacy_backup_before_rewrite/src/onedrive_redirector/ui/qml/: MainWindow.qml  ProjectCard.qml  StatusBadge.qml
_legacy_backup_before_rewrite/tests/: test_config_manager.py  test_models.py  test_path_utils.py  test_status_checker.py
docs/: config_format.md
src/onedrive_redirector/: app.py
src/onedrive_redirector/core/: __init__.py  file_ops.py  junction_ops.py  logger_setup.py  models.py  path_utils.py  project_service.py  project_store.py  settings_store.py  status_checker.py
src/onedrive_redirector/ui/: controller.py  main_window.py
src/onedrive_redirector/ui/qml/: AnimatedButton.qml  ConflictDialog.qml  (+6 more)
tests/: test_file_ops.py  test_junction_ops.py  test_path_utils.py  test_project_service.py  test_project_store.py  test_settings_store.py  test_status_checker.py
