[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onedrive-redirector"
version = "0.1.0"
description = "A safe Windows junction mapping manager for OneDrive-backed directories."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--basetemp=.pytest_tmp_runtime"
cache_dir = ".pytest_cache_runtime"
